Use List.of() instead of Arrays.asList()/Lists
Java 11 has a nice List.of(), which we can use to make our code
a tad leaner.

Change-Id: I62ac055bd9273fac8632c79cf7d664c47c1303e2
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>